fix(sign-up): break word in radio-button to prevent text overflow
#10

--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -27,6 +27,8 @@
     display: inline-block;
     float: left;
     margin-right: 1.25rem;
+    max-width: 48%;
+    word-break: break-word;
   }
   &__gender-group {
     display: flex;
